--- a/.github/workflows/createIssues.yml
+++ b/.github/workflows/createIssues.yml
@@ -6,6 +6,11 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
+    - name: Node Version
+      uses: action/setup-node@v3
+      with:
+        node-version: 16.x
+        
     - uses: actions/github-script@0.8.0
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
