--- a/.github/workflows/createIssues.yml
+++ b/.github/workflows/createIssues.yml
@@ -5,13 +5,8 @@ on:
 jobs:
   comment:
     runs-on: ubuntu-latest
-    steps:
-    - name: Node Version
-      uses: action/setup-node@v3
-      with:
-        node-version: 16.x
-        
-    - uses: actions/github-script@0.8.0
+    steps:        
+    - uses: actions/github-script@v6
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
         script: |
