--- a/.github/workflows/createIssues.yml
+++ b/.github/workflows/createIssues.yml
@@ -10,13 +10,13 @@ jobs:
       with:
         github-token: ${% raw %}{{secrets.GITHUB_TOKEN}}{% endraw %}
         script: |
-            github.issues.createComment({
+            github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             body: "🎉 You've created this issue comment using GitHub Script!!!"
             })
-            github.projects.createCard({
+            github.rest.projects.createCard({
             column_id: {{columnID}},
             content_id: context.payload.issue.id,
             content_type: "Issue"
